@@ -3,6 +3,10 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-10:
+
+- Fixed a potential crash on retrieving an empty line from the command history.
+
 2022-07-09:
 
 - Fixed a bug that broke '[[ ... ]]' test expressions for the command
